[gd_scene load_steps=5 format=3 uid="uid://cqkk62rlbp3l"]

[ext_resource type="Script" path="res://Hud/Scenes/Settings.gd" id="1_fcgah"]
[ext_resource type="Theme" uid="uid://b8t7tkhvril5g" path="res://Hud/Themes/Standard.tres" id="4_7cy5f"]
[ext_resource type="Theme" uid="uid://cjvpbaiddna0a" path="res://Hud/Themes/Standard Rounded.tres" id="4_m75kr"]
[ext_resource type="PackedScene" uid="uid://cnygr4pwivdv1" path="res://Hud/Scenes/RichLabel.tscn" id="5_w75e1"]

[node name="Settings" type="MarginContainer"]
offset_right = 158.0
offset_bottom = 68.0
script = ExtResource("1_fcgah")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="JoypadDetected" parent="VBoxContainer2/VBoxContainer3" instance=ExtResource("5_w75e1")]
layout_mode = 2
text = "[img=<15>]res://Art/Icons/Hud/Fullscreen.png[/img] [i]Fullscreen"
autowrap_mode = 0

[node name="Details" type="MarginContainer" parent="VBoxContainer2/VBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer2/VBoxContainer3/Details"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_7cy5f")
text = "Enabled"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" parent="VBoxContainer2/VBoxContainer4" instance=ExtResource("5_w75e1")]
layout_mode = 2
text = "[img=<15>]res://Art/Icons/Hud/Zoom.png[/img] [i]Scale"
autowrap_mode = 0

[node name="Details" type="MarginContainer" parent="VBoxContainer2/VBoxContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="Scale" type="OptionButton" parent="VBoxContainer2/VBoxContainer4/Details"]
layout_mode = 2
theme = ExtResource("4_m75kr")
item_count = 13
selected = 0
popup/item_0/text = "0.9"
popup/item_0/id = 12
popup/item_1/text = "0.95"
popup/item_1/id = 11
popup/item_2/text = "1.0"
popup/item_2/id = 0
popup/item_3/text = "1.05"
popup/item_3/id = 1
popup/item_4/text = "1.1"
popup/item_4/id = 2
popup/item_5/text = "1.15"
popup/item_5/id = 3
popup/item_6/text = "1.2"
popup/item_6/id = 4
popup/item_7/text = "1.25"
popup/item_7/id = 5
popup/item_8/text = "1.3"
popup/item_8/id = 6
popup/item_9/text = "1.35"
popup/item_9/id = 7
popup/item_10/text = "1.4"
popup/item_10/id = 8
popup/item_11/text = "1.45"
popup/item_11/id = 9
popup/item_12/text = "1.5"
popup/item_12/id = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="JoypadDetected" parent="VBoxContainer2/VBoxContainer" instance=ExtResource("5_w75e1")]
layout_mode = 2
text = "[img=<15>]res://Art/Icons/Hud/Joypad.png[/img] [i]Joypad"
autowrap_mode = 0

[node name="Details" type="MarginContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer/Details"]
layout_mode = 2

[node name="JoypadAllowed" type="CheckBox" parent="VBoxContainer2/VBoxContainer/Details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_7cy5f")
button_pressed = true
text = "Allowed"

[node name="JoypadDetected" parent="VBoxContainer2/VBoxContainer/Details/VBoxContainer" instance=ExtResource("5_w75e1")]
unique_name_in_owner = true
layout_mode = 2
text = "Detected: No"
autowrap_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" parent="VBoxContainer2/VBoxContainer2" instance=ExtResource("5_w75e1")]
layout_mode = 2
text = "[img=<15>]res://Art/Icons/Hud/Time.png[/img] [i]ETA Text Mode"
autowrap_mode = 0

[node name="Details" type="MarginContainer" parent="VBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="ETA Mode" type="OptionButton" parent="VBoxContainer2/VBoxContainer2/Details"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_m75kr")
item_count = 2
selected = 0
popup/item_0/text = "Longest Possible"
popup/item_0/id = 1
popup/item_1/text = "Actual"
popup/item_1/id = 0

[connection signal="item_selected" from="VBoxContainer2/VBoxContainer4/Details/Scale" to="." method="_on_scale_item_selected"]
